# xgboost_shipping_route_prediction

./: README.md  pyproject.toml
bash_scripts/: eval.sh  inference.sh  train.sh  tune_cisc.sh
data/: operator_speed_kn_by_loa_bin.json  vessel_data.json
data/coarse_32x64_grid/: depth_32x64.csv  ports_32x64.json
data/coarse_32x64_grid/grid_construction_32x64/: lat_mapping_table.csv  longitude_indices.csv  mask.csv  metadata.txt
data/fine_128x256_grid/: depth_128x256.csv  ports_128x256.json
data/fine_128x256_grid/grid_construction_128x256/: lat_mapping_table.csv  longitude_indices.csv  mask.csv
models_pretrained/xgboost_coarse_simple_32x64_d12_n500_20260108_165708/: config_xgboost.json  feature_importance.json  training_results.json
results/evaluation_results/coarse_20260216_121649/: comparison.csv  comparison.json  config.json  histogram_frechet_km.csv
results/evaluation_results/coarse_20260216_121649/shortest_path/: summary.json  trajectories.csv
results/evaluation_results/coarse_20260216_121649/xgb_coarse_full_cisc/: summary.json  trajectories.csv
results/evaluation_results/coarse_20260216_121649/xgb_coarse_full_greedy/: summary.json  trajectories.csv
results/evaluation_results/coarse_20260216_121649/xgb_coarse_simple_cisc/: summary.json  trajectories.csv
results/evaluation_results/coarse_20260216_121649/xgb_coarse_simple_greedy/: summary.json  trajectories.csv
results/evaluation_results/coarse_20260216_131914/: comparison.csv  comparison.json  histogram_frechet_km.csv
results/inference_results/Shanghai_LongBeach_fine_20260213_182511/: shortest_path.json  simple_greedy.json  summary.json
results/shap_results/coarse_20260216_124332/full_cisc/: category_importance.csv  feature_importance.csv  feature_names.json  step_shap.json
results/shap_results/fine_20260213_172702/simple_greedy/: category_importance.csv  feature_importance.csv  feature_names.json  (+1 more)
src/: baselines.py  config.py  data.py  env.py  eval.py  explainability_shap.py  gui.py  inference.py  rollout.py  train.py  tune_cisc.py  utils.py  visualize.py
